--- a/gpt-webapp.web/src/main/resources/static/css/index.css
+++ b/gpt-webapp.web/src/main/resources/static/css/index.css
@@ -212,3 +212,13 @@ body {
 .close-chat:hover {
     color: #ff5555;
 }
+
+.model-selector {
+    float: left;
+    margin-right: 10px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+}
