--- a/gpt-webapp.web/src/main/resources/static/css/index.css
+++ b/gpt-webapp.web/src/main/resources/static/css/index.css
@@ -24,21 +24,25 @@ body {
 }
 
 .chat-header {
-    background-color: #333;
+   background-color: #333;
     padding: 10px;
     color: white;
-    position: relative;
-    cursor: move; /* Habilita mover el chat */
     display: flex;
-    justify-content: space-between; /* Espacia el selector y el botón de cerrar */
+    justify-content: space-between;
     align-items: center;
+    position: relative; /* Para posicionamiento absoluto del título */
+    cursor: move; /* Habilita mover el chat */
+    height: 40px; 
 }
 
 .chat-title {
-    flex-grow: 1;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     text-align: center;
     font-weight: bold;
-    margin-left: 10px; /* Ajustar para espacio entre el selector y el título */
+    z-index: 0; /* Para que no se superponga sobre el selector o el botón de cerrar */
+    white-space: nowrap; /* Ajustar para espacio entre el selector y el título */
 }
 
 .chat-messages {
@@ -211,8 +215,9 @@ body {
 }
 
 .close-chat {
-     cursor: pointer;
+    cursor: pointer;
     color: #ccc;
+    z-index: 1;
 }
 
 .close-chat:hover {
@@ -226,4 +231,5 @@ body {
     border: none;
     padding: 5px;
     border-radius: 5px;
+    z-index: 1;
 }
