--- a/gpt-webapp.web/src/main/resources/static/css/index.css
+++ b/gpt-webapp.web/src/main/resources/static/css/index.css
@@ -66,6 +66,11 @@ body {
     clear: both;
 }
 
+.message span {
+    word-break: keep-all;
+    hyphens: manual;
+}
+
 .message.user {
     background-color: #0d6efd;
     color: #fff;
@@ -113,6 +118,9 @@ body {
 
 .code-block pre, .code-block code {
     line-height: 1.8;
+    overflow-x: auto;
+    word-break: normal;
+    white-space: pre;
 }
 
 .chat-input {
