--- a/gpt-webapp.web/src/main/resources/static/css/panel.css
+++ b/gpt-webapp.web/src/main/resources/static/css/panel.css
@@ -38,6 +38,8 @@ body {
 }
 
 .chat-list li {
+    display: flex;
+    align-items: center;
     padding: 10px;
     background-color: #333;
     margin-bottom: 10px;
@@ -50,17 +52,29 @@ body {
     background-color: #555;
 }
 
+.chat-item-title {
+    flex: 1; /* Ocupa todo el espacio disponible */
+    overflow: hidden; /* Oculta el texto que no cabe */
+    text-overflow: ellipsis; /* Añade '...' al final si el texto es demasiado largo */
+    white-space: nowrap; /* Evita que el texto se divida en varias líneas */
+}
+
 #addChatBtn {
-    width: 100%; /* Para que el botón ocupe todo el ancho del panel */
+    width: 100%; /* El botón ocupa todo el ancho del panel */
     padding: 10px;
     font-size: 16px;
+    background-color: #0d6efd;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .edit-icon, .delete-icon {
     margin-left: 10px;
     cursor: pointer;
     color: #ccc;
-    float: right; /* Alinear el icono a la derecha */
+    flex: 0 0 auto; /* Evita que los íconos se estiren o reduzcan */
 }
 
 .edit-icon:hover , .delete-icon:hover{
